fix header spacing

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,11 +7,12 @@
   justify-content: space-between;
 }
 .inner {
-  padding: 14px 25px;
   flex: 1 1 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 58px;
+  padding: 0 25px;
 }
 
 .arrow_next {
@@ -41,4 +42,12 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+}
+
+.start__inner {
+  height: 66px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 25px;
 }
